--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>BvR - Bleu vs Rouge</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎮</text></svg>">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="space-effects.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -186,6 +187,7 @@
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="auth-ui.js"></script>
+    <script src="space-effects.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
