Ajout règles du jeu avec encodage UTF-8 correct

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
@@ -41,75 +41,75 @@
             <!-- Section RÃ¨gles du jeu -->
             <div class="rules-toggle">
                 <button class="btn btn-rules" onclick="toggleRules()">
-                    <span class="btn-icon">ðŸ"</span>
+                    <span class="btn-icon">ðŸ“–</span>
                     RÃ¨gles du jeu
-                    <span class="arrow-down">â</span>
+                    <span class="arrow-down">â–¼</span>
                 </button>
             </div>
 
             <div id="rules-content" class="rules-section hidden">
                 <div class="rules-card">
-                    <h3 class="rules-title">ðŸŽ Comment jouer ?</h3>
+                    <h3 class="rules-title">ðŸŽ® Comment jouer ?</h3>
                     
                     <div class="rule-block">
-                        <h4>ðŸ" Principe</h4>
+                        <h4>ðŸ“– Principe</h4>
                         <ul>
-                            <li>Deux Ãquipes s'affrontent : <strong class="blue-text">BLEUS</strong> vs <strong class="red-text">ROUGES</strong></li>
-                            <li>Chaque joueur connaÃt uniquement sa propre Ãquipe et son rÃle</li>
-                            <li><strong>Objectif :</strong> Ãliminer le reprÃsentant de l'Ãquipe adverse</li>
+                            <li>Deux Ã©quipes s'affrontent : <strong class="blue-text">BLEUS</strong> vs <strong class="red-text">ROUGES</strong></li>
+                            <li>Chaque joueur connaÃ®t uniquement sa propre Ã©quipe et son rÃ´le</li>
+                            <li><strong>Objectif :</strong> Ã‰liminer le reprÃ©sentant de l'Ã©quipe adverse</li>
                         </ul>
                     </div>
 
                     <div class="teams-grid">
                         <div class="team-card team-blue">
-                            <h4>ðŸ"µ ÃQUIPE BLEUE</h4>
+                            <h4>ðŸ”µ Ã‰QUIPE BLEUE</h4>
                             <div class="role-item">
-                                <strong>ðŸ'' ReprÃsentant</strong>
-                                <p>Cible Ã  protÃger</p>
+                                <strong>ðŸ‘‘ ReprÃ©sentant</strong>
+                                <p>Cible Ã  protÃ©ger</p>
                             </div>
                             <div class="role-item">
-                                <strong>ðŸ" Tueur</strong>
-                                <p>1 munition pour Ãliminer</p>
+                                <strong>ðŸ”« Tueur</strong>
+                                <p>1 munition pour Ã©liminer</p>
                             </div>
                             <div class="role-item">
-                                <strong>ðŸ'¤ Lambdas</strong>
-                                <p>Membres de l'Ãquipe</p>
+                                <strong>ðŸ‘¤ Lambdas</strong>
+                                <p>Membres de l'Ã©quipe</p>
                             </div>
                         </div>
 
                         <div class="team-card team-red">
-                            <h4>ðŸ" ÃQUIPE ROUGE</h4>
+                            <h4>ðŸ”´ Ã‰QUIPE ROUGE</h4>
                             <div class="role-item">
-                                <strong>ðŸ'' ReprÃsentant</strong>
-                                <p>Cible Ã  protÃger</p>
+                                <strong>ðŸ‘‘ ReprÃ©sentant</strong>
+                                <p>Cible Ã  protÃ©ger</p>
                             </div>
                             <div class="role-item">
-                                <strong>ðŸ" Tueur</strong>
-                                <p>1 munition pour Ãliminer</p>
+                                <strong>ðŸ”« Tueur</strong>
+                                <p>1 munition pour Ã©liminer</p>
                             </div>
                             <div class="role-item">
-                                <strong>ðŸ'¤ Lambdas</strong>
-                                <p>Membres de l'Ãquipe</p>
+                                <strong>ðŸ‘¤ Lambdas</strong>
+                                <p>Membres de l'Ã©quipe</p>
                             </div>
                         </div>
                     </div>
 
                     <div class="rule-block">
-                        <h4>âš"ï DÃroulement</h4>
+                        <h4>âš”ï¸ DÃ©roulement</h4>
                         <ul>
-                            <li><strong>Phase d'infiltration :</strong> Discutez et dÃcouvrez qui sont vos alliÃs</li>
-                            <li><strong>Phase de vote :</strong> Votez pour Ãliminer un joueur suspect</li>
-                            <li><strong>Action du tueur :</strong> Le tueur peut utiliser sa munition Ã  tout moment</li>
-                            <li><strong>Victoire :</strong> PremiÃ¨re Ãquipe Ã  Ãliminer le reprÃsentant adverse gagne</li>
+                            <li><strong>Phase d'infiltration :</strong> Discutez et dÃ©couvrez qui sont vos alliÃ©s</li>
+                            <li><strong>Phase de vote :</strong> Votez pour Ã©liminer un joueur suspect</li>
+                            <li><strong>Action du tueur :</strong> Le tueur peut utiliser sa munition Ã  tout moment</li>
+                            <li><strong>Victoire :</strong> PremiÃ¨re Ã©quipe Ã  Ã©liminer le reprÃ©sentant adverse gagne</li>
                         </ul>
                     </div>
 
                     <div class="rule-block">
-                        <h4>ðŸ' StratÃgie</h4>
+                        <h4>ðŸ’¡ StratÃ©gie</h4>
                         <ul>
-                            <li>Communiquez discrÃ¨tement avec votre Ãquipe</li>
-                            <li>DÃmasquez les infiltrÃs adverses</li>
-                            <li>ProtÃgez votre reprÃsentant Ã  tout prix</li>
+                            <li>Communiquez discrÃ¨tement avec votre Ã©quipe</li>
+                            <li>DÃ©masquez les infiltrÃ©s adverses</li>
+                            <li>ProtÃ©gez votre reprÃ©sentant Ã  tout prix</li>
                             <li>Bluffez pour semer le doute chez l'adversaire</li>
                         </ul>
                     </div>
@@ -269,4 +269,3 @@
     <script src="app.js"></script>
 </body>
 </html>
-
