✨ Configuration UTF-8 complète + Production Render uniquement - Suppression de toutes les URLs localhost

--- a/public/index_clean.html
+++ b/public/index_clean.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
@@ -102,17 +102,15 @@
         }
 
         button {
-            padding: 22px 36px;
-            font-size: 20px;
-            font-weight: 700;
+            padding: 18px 30px;
+            font-size: 18px;
+            font-weight: 600;
             border: none;
-            border-radius: 14px;
+            border-radius: 12px;
             cursor: pointer;
             transition: all 0.3s ease;
             position: relative;
             overflow: hidden;
-            letter-spacing: 1px;
-            text-transform: uppercase;
         }
 
         button::before {
@@ -141,67 +139,57 @@
         .btn-primary {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             color: white;
-            box-shadow: 0 12px 36px rgba(102, 126, 234, 0.5);
-            text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 10px 30px rgba(102, 126, 234, 0.4);
         }
 
         .btn-primary:hover {
-            transform: translateY(-4px);
-            box-shadow: 0 18px 50px rgba(102, 126, 234, 0.7);
+            transform: translateY(-2px);
+            box-shadow: 0 15px 40px rgba(102, 126, 234, 0.6);
         }
 
         .btn-secondary {
-            background: rgba(255, 255, 255, 0.15);
+            background: rgba(255, 255, 255, 0.1);
             color: white;
-            border: 3px solid rgba(255, 255, 255, 0.4);
-            box-shadow: 0 8px 24px rgba(0, 0, 0, 0.3);
+            border: 2px solid rgba(255, 255, 255, 0.3);
         }
 
         .btn-secondary:hover {
-            background: rgba(255, 255, 255, 0.25);
-            border-color: rgba(255, 255, 255, 0.7);
-            transform: translateY(-4px);
-            box-shadow: 0 12px 32px rgba(255, 255, 255, 0.2);
+            background: rgba(255, 255, 255, 0.2);
+            border-color: rgba(255, 255, 255, 0.5);
         }
 
         .auth-links {
             margin-top: 30px;
-            padding-top: 25px;
-            border-top: 2px solid rgba(255, 255, 255, 0.2);
+            padding-top: 20px;
+            border-top: 1px solid rgba(255, 255, 255, 0.2);
         }
 
         .auth-links a {
             color: #60a5fa;
             text-decoration: none;
-            font-size: 16px;
-            font-weight: 500;
-            margin: 0 15px;
-            transition: all 0.3s ease;
-            padding: 8px 16px;
-            border-radius: 8px;
+            font-size: 14px;
+            margin: 0 10px;
+            transition: color 0.3s ease;
         }
 
         .auth-links a:hover {
             color: #93c5fd;
-            background: rgba(96, 165, 250, 0.15);
-            text-decoration: none;
+            text-decoration: underline;
         }
 
         .rules {
-            margin-top: 25px;
-            padding: 25px;
-            background: rgba(255, 255, 255, 0.08);
-            border-radius: 12px;
-            font-size: 15px;
+            margin-top: 20px;
+            padding: 20px;
+            background: rgba(255, 255, 255, 0.05);
+            border-radius: 10px;
+            font-size: 13px;
             text-align: left;
-            line-height: 1.8;
-            border: 1px solid rgba(255, 255, 255, 0.1);
+            line-height: 1.6;
         }
 
         .rules h3 {
-            margin-bottom: 15px;
+            margin-bottom: 10px;
             color: #fbbf24;
-            font-size: 18px;
         }
 
         .rules ul {
@@ -210,10 +198,9 @@
         }
 
         .rules li {
-            margin: 10px 0;
-            padding-left: 24px;
+            margin: 8px 0;
+            padding-left: 20px;
             position: relative;
-            font-size: 15px;
         }
 
         .rules li::before {
@@ -221,7 +208,6 @@
             position: absolute;
             left: 0;
             color: #60a5fa;
-            font-weight: bold;
         }
     </style>
 </head>
