--- a/public/verify-email.html
+++ b/public/verify-email.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vérification Email - Jeu Bleu Rouge</title>
     <link rel="stylesheet" href="style.css">
